add: header, main content

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,37 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Document</title>
 </head>
 <body>
-  
+    <div class="container">
+      <header>
+        <nav>
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Projects</a>
+          <a href="#"><i class="fa-solid fa-sun"></i></a>
+          <a href="#"><i class="fa-solid fa-language"></i></a>
+        </nav>
+      </header>
+      <main>
+        <div class="about">
+          <div class="about-text">
+            <h1>Cesar Luis Lojan Campoverde</h1>
+            <span>Web Development</span>
+            
+          </div>
+          <img src="https://avatars.githubusercontent.com/u/67608060?v=4" alt="" srcset="">
+        </div>
+        <div class="texto">
+          <p>
+            Takuya es un desarrollador freelance de pila completa con sede en Osaka y una pasión por construir servicios / cosas digitales que él desea. Tiene una habilidad especial para todo lo relacionado con el lanzamiento de productos, desde la planificación y el diseño hasta la resolución de problemas reales con código. Cuando no está en línea, le encanta salir con su cámara. Actualmente, vive de su propio producto llamado Inkdrop. Publica contenido para promocionar sus productos y su canal de YouTube llamado "Dev as Life" tiene más de 100 mil suscriptores.
+          </p>
+        </div>
+      </main>
+    </div>
+    
 </body>
 </html>
