add: projects, responsive

--- a/src/index.html
+++ b/src/index.html
@@ -28,12 +28,42 @@
           </div>
           <img src="https://avatars.githubusercontent.com/u/67608060?v=4" alt="" srcset="">
         </div>
-        <div class="texto">
+        <div class="flex texto">
+          <a href="#" class="links"><i class="fa-solid fa-link"></i>About me</a>
           <p>
-            Takuya es un desarrollador freelance de pila completa con sede en Osaka y una pasión por construir servicios / cosas digitales que él desea. Tiene una habilidad especial para todo lo relacionado con el lanzamiento de productos, desde la planificación y el diseño hasta la resolución de problemas reales con código. Cuando no está en línea, le encanta salir con su cámara. Actualmente, vive de su propio producto llamado Inkdrop. Publica contenido para promocionar sus productos y su canal de YouTube llamado "Dev as Life" tiene más de 100 mil suscriptores.
+            I'm Cesar Lojan a technology and creativity enthusiast. I love exploring new ideas and pushing the limits of what's possible. I dedicate myself to learning and experimenting with different tools and technologies in order to create unique and attractive solutions. In my free time, I enjoy reading, watching movies and TV shows, and trying out new recipes in the kitchen. I'm always ready to tackle new challenges and bring your ideas to life!
           </p>
         </div>
+        <div class="projects">
+          <a href="#" class="links"><i class="fa-solid fa-link"></i>Projects</a>
+          <div class="cont-projects">
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <div class="project"></div>
+              <span class="name-project">Texto</span>
+            </a>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <div class="project"></div>
+              <span class="name-project">Texto</span>
+            </a><a href="http://" target="_blank" rel="noopener noreferrer">
+              <div class="project"></div>
+              <span class="name-project">Texto</span>
+            </a><a href="http://" target="_blank" rel="noopener noreferrer">
+              <div class="project"></div>
+              <span class="name-project">Texto</span>
+            </a><a href="http://" target="_blank" rel="noopener noreferrer">
+              <div class="project"></div>
+              <span class="name-project">Texto</span>
+            </a><a href="http://" target="_blank" rel="noopener noreferrer">
+              <div class="project"></div>
+              <span class="name-project">Texto</span>
+            </a>
+          </div>
+        </div>
+        <footer>
+          <span>© 2023 Cesar Luis Lojan All Rights Reserved.</span>
+        </footer>
       </main>
+      
     </div>
     
 </body>
