--- a/src/index.html
+++ b/src/index.html
@@ -66,30 +66,39 @@
 
           <div class="cont-projects">
             <a href="http://" target="_blank" rel="noopener noreferrer">
-              <div class="project"></div>
-              <span class="name-project desc__active" data-content="idiom" id="en">Text</span>
-              <span class="name-project " data-content="idiom" id="es">Texto</span>
+
+              <div class="project" style="background-image: url('./img/portfolio/Web\ capture_12-4-2023_17057_cllojan.github.io.jpeg');"></div>
+              <span class="name-project desc__active" data-content="idiom" id="en">OctoProfile</span>
+              <span class="name-project " data-content="idiom" id="es">OctoProfile</span>
             </a>
             <a href="http://" target="_blank" rel="noopener noreferrer">
-              <div class="project"></div>
-              <span class="name-project desc__active" data-content="idiom" id="en">Text</span>
-              <span class="name-project " data-content="idiom" id="es">Texto</span>
-            </a><a href="http://" target="_blank" rel="noopener noreferrer">
-              <div class="project"></div>
-              <span class="name-project desc__active" data-content="idiom" id="en">Text</span>
-              <span class="name-project " data-content="idiom" id="es">Texto</span>
-            </a><a href="http://" target="_blank" rel="noopener noreferrer">
-              <div class="project"></div>
-              <span class="name-project desc__active" data-content="idiom" id="en">Text</span>
-              <span class="name-project " data-content="idiom" id="es">Texto</span>
-            </a><a href="http://" target="_blank" rel="noopener noreferrer">
-              <div class="project"></div>
-              <span class="name-project desc__active" data-content="idiom" id="en">Text</span>
-              <span class="name-project " data-content="idiom" id="es">Texto</span>
-            </a><a href="http://" target="_blank" rel="noopener noreferrer">
-              <div class="project"></div>
-              <span class="name-project desc__active" data-content="idiom" id="en">Text</span>
-              <span class="name-project " data-content="idiom" id="es">Texto</span>
+
+              <div class="project" style="background-image: url('./img/portfolio/kanban.png');"></div>
+              <span class="name-project desc__active" data-content="idiom" id="en">Kanban</span>
+              <span class="name-project " data-content="idiom" id="es">Kanban</span>
+            </a>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+
+              <div class="project" style="background-image: url('./img/portfolio/Screenshot\ from\ 2023-04-12\ 20-16-47.png');"></div>
+              <span class="name-project desc__active" data-content="idiom" id="en">Itec Homepage</span>
+              <span class="name-project " data-content="idiom" id="es">Itec Pagina Principal</span>
+            </a>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+
+              <div class="project" style="background-image: url('./img/portfolio/movie-search.png');" ></div>
+              <span class="name-project desc__active" data-content="idiom" id="en">Movie Search</span>
+              <span class="name-project " data-content="idiom" id="es">Buscador de Peliculas</span>
+            </a>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+
+              <div class="project" style="background-image: url('./img/portfolio/restcountry.png');"></div>
+              <span class="name-project desc__active" data-content="idiom" id="en">Search Country</span>
+              <span class="name-project " data-content="idiom" id="es">Buscar Pais</span>
+            </a>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <div class="project" style="background-image: url('./img/portfolio/sokoban.png');"></div>
+              <span class="name-project desc__active" data-content="idiom" id="en">Sokoban Game</span>
+              <span class="name-project " data-content="idiom" id="es">Juego tipo Sokoban</span>
             </a>
           </div>
         </div>
@@ -125,30 +134,39 @@
           <a href="#" class="links head desc" data-content="idiom" id="es"><i class="fa-solid fa-link"></i>Proyectos</a>
           <div class="cont-projects">
             <a href="http://" target="_blank" rel="noopener noreferrer">
-              <div class="project"></div>
-              <span class="name-project desc__active" data-content="idiom" id="en">Text</span>
-              <span class="name-project " data-content="idiom" id="es">Texto</span>
+
+              <div class="project" style="background-image: url('./img/portfolio/Web\ capture_12-4-2023_17057_cllojan.github.io.jpeg');"></div>
+              <span class="name-project desc__active" data-content="idiom" id="en">OctoProfile</span>
+              <span class="name-project " data-content="idiom" id="es">OctoProfile</span>
             </a>
             <a href="http://" target="_blank" rel="noopener noreferrer">
-              <div class="project"></div>
-              <span class="name-project desc__active" data-content="idiom" id="en">Text</span>
-              <span class="name-project " data-content="idiom" id="es">Texto</span>
-            </a><a href="http://" target="_blank" rel="noopener noreferrer">
-              <div class="project"></div>
-              <span class="name-project desc__active" data-content="idiom" id="en">Text</span>
-              <span class="name-project " data-content="idiom" id="es">Texto</span>
-            </a><a href="http://" target="_blank" rel="noopener noreferrer">
-              <div class="project"></div>
-              <span class="name-project desc__active" data-content="idiom" id="en">Text</span>
-              <span class="name-project " data-content="idiom" id="es">Texto</span>
-            </a><a href="http://" target="_blank" rel="noopener noreferrer">
-              <div class="project"></div>
-              <span class="name-project desc__active" data-content="idiom" id="en">Text</span>
-              <span class="name-project " data-content="idiom" id="es">Texto</span>
-            </a><a href="http://" target="_blank" rel="noopener noreferrer">
-              <div class="project"></div>
-              <span class="name-project desc__active" data-content="idiom" id="en">Text</span>
-              <span class="name-project " data-content="idiom" id="es">Texto</span>
+
+              <div class="project" style="background-image: url('./img/portfolio/kanban.png');"></div>
+              <span class="name-project desc__active" data-content="idiom" id="en">Kanban</span>
+              <span class="name-project " data-content="idiom" id="es">Kanban</span>
+            </a>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+
+              <div class="project" style="background-image: url('./img/portfolio/Screenshot\ from\ 2023-04-12\ 20-16-47.png');"></div>
+              <span class="name-project desc__active" data-content="idiom" id="en">Itec Homepage</span>
+              <span class="name-project " data-content="idiom" id="es">Itec Pagina Principal</span>
+            </a>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+
+              <div class="project" style="background-image: url('./img/portfolio/movie-search.png');" ></div>
+              <span class="name-project desc__active" data-content="idiom" id="en">Movie Search</span>
+              <span class="name-project " data-content="idiom" id="es">Buscador de Peliculas</span>
+            </a>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+
+              <div class="project" style="background-image: url('./img/portfolio/restcountry.png');"></div>
+              <span class="name-project desc__active" data-content="idiom" id="en">Search Country</span>
+              <span class="name-project " data-content="idiom" id="es">Buscar Pais</span>
+            </a>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <div class="project" style="background-image: url('./img/portfolio/sokoban.png');"></div>
+              <span class="name-project desc__active" data-content="idiom" id="en">Sokoban Game</span>
+              <span class="name-project " data-content="idiom" id="es">Juego tipo Sokoban</span>
             </a>
           </div>
         </div>
