--- a/src/index.html
+++ b/src/index.html
@@ -133,31 +133,31 @@
           <a href="#" class="links head desc desc__active" data-content="idiom" id="en"><i class="fa-solid fa-link"></i>Projects</a>
           <a href="#" class="links head desc" data-content="idiom" id="es"><i class="fa-solid fa-link"></i>Proyectos</a>
           <div class="cont-projects">
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.cllojan.github.io/OctoProfile/" target="_blank" >
 
               <div class="project" style="background-image: url('./img/portfolio/Web\ capture_12-4-2023_17057_cllojan.github.io.jpeg');"></div>
               <span class="name-project desc__active" data-content="idiom" id="en">OctoProfile</span>
               <span class="name-project " data-content="idiom" id="es">OctoProfile</span>
             </a>
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/cllojan/kanban-dnd" target="_blank" rel="noopener noreferrer">
 
               <div class="project" style="background-image: url('./img/portfolio/kanban.png');"></div>
               <span class="name-project desc__active" data-content="idiom" id="en">Kanban</span>
               <span class="name-project " data-content="idiom" id="es">Kanban</span>
             </a>
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/cllojan/itec-page" target="_blank" rel="noopener noreferrer">
 
               <div class="project" style="background-image: url('./img/portfolio/Screenshot\ from\ 2023-04-12\ 20-16-47.png');"></div>
               <span class="name-project desc__active" data-content="idiom" id="en">Itec Homepage</span>
               <span class="name-project " data-content="idiom" id="es">Itec Pagina Principal</span>
             </a>
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a href="https://cllojan.github.io/movie-search/" target="_blank" rel="noopener noreferrer">
 
               <div class="project" style="background-image: url('./img/portfolio/movie-search.png');" ></div>
               <span class="name-project desc__active" data-content="idiom" id="en">Movie Search</span>
               <span class="name-project " data-content="idiom" id="es">Buscador de Peliculas</span>
             </a>
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a href="https://cllojan.github.io/rest-country/" target="_blank" rel="noopener noreferrer">
 
               <div class="project" style="background-image: url('./img/portfolio/restcountry.png');"></div>
               <span class="name-project desc__active" data-content="idiom" id="en">Search Country</span>
