--- a/src/index.html
+++ b/src/index.html
@@ -65,37 +65,37 @@
           <a href="#" data-target="#projects" class="links head desc" data-content="idiom" id="es"><i class="fa-solid fa-link"></i>Proyectos</a>
 
           <div class="cont-projects">
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a href="https://cllojan.github.io/OctoProfile/" target="_blank" rel="noopener noreferrer">
 
               <div class="project" style="background-image: url('./img/portfolio/Web\ capture_12-4-2023_17057_cllojan.github.io.jpeg');"></div>
               <span class="name-project desc__active" data-content="idiom" id="en">OctoProfile</span>
               <span class="name-project " data-content="idiom" id="es">OctoProfile</span>
             </a>
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/cllojan/kanban-dnd" target="_blank" rel="noopener noreferrer">
 
               <div class="project" style="background-image: url('./img/portfolio/kanban.png');"></div>
               <span class="name-project desc__active" data-content="idiom" id="en">Kanban</span>
               <span class="name-project " data-content="idiom" id="es">Kanban</span>
             </a>
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/cllojan/itec-page" target="_blank" rel="noopener noreferrer">
 
               <div class="project" style="background-image: url('./img/portfolio/Screenshot\ from\ 2023-04-12\ 20-16-47.png');"></div>
               <span class="name-project desc__active" data-content="idiom" id="en">Itec Homepage</span>
               <span class="name-project " data-content="idiom" id="es">Itec Pagina Principal</span>
             </a>
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a href="https://cllojan.github.io/movie-search/" target="_blank" rel="noopener noreferrer">
 
               <div class="project" style="background-image: url('./img/portfolio/movie-search.png');" ></div>
               <span class="name-project desc__active" data-content="idiom" id="en">Movie Search</span>
               <span class="name-project " data-content="idiom" id="es">Buscador de Peliculas</span>
             </a>
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a href="https://cllojan.github.io/rest-country/" target="_blank" rel="noopener noreferrer">
 
               <div class="project" style="background-image: url('./img/portfolio/restcountry.png');"></div>
               <span class="name-project desc__active" data-content="idiom" id="en">Search Country</span>
               <span class="name-project " data-content="idiom" id="es">Buscar Pais</span>
             </a>
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a href="https://cllojan.github.io/Sokoban_gd/game/Sokoban.html" target="_blank" rel="noopener noreferrer">
               <div class="project" style="background-image: url('./img/portfolio/sokoban.png');"></div>
               <span class="name-project desc__active" data-content="idiom" id="en">Sokoban Game</span>
               <span class="name-project " data-content="idiom" id="es">Juego tipo Sokoban</span>
@@ -103,7 +103,8 @@
           </div>
         </div>
         <footer>
-          <span>© 2023 Cesar Luis Lojan All Rights Reserved.</span>
+          <span class="desc__active" data-content="idiom" id="en">© 2023 Cesar Luis Lojan All Rights Reserved.</span>
+          <span class="" data-content="idiom" id="es">© 2023 Derechos Reservados a Cesar Luis Lojan.</span>
         </footer>
       </main>
       <!-- About Content -->
@@ -122,7 +123,8 @@
         </div>
         
         <footer>
-          <span>© 2023 Cesar Luis Lojan All Rights Reserved.</span>
+          <span class="desc__active" data-content="idiom" id="en">© 2023 Cesar Luis Lojan All Rights Reserved.</span>
+          <span class="" data-content="idiom" id="es">© 2023 Derechos Reservados a Cesar Luis Lojan.</span>
         </footer>
       </main>
       <!-- Projects Content -->
@@ -163,7 +165,7 @@
               <span class="name-project desc__active" data-content="idiom" id="en">Search Country</span>
               <span class="name-project " data-content="idiom" id="es">Buscar Pais</span>
             </a>
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a href="https://cllojan.github.io/Sokoban_gd/game/Sokoban.html" target="_blank" rel="noopener noreferrer">
               <div class="project" style="background-image: url('./img/portfolio/sokoban.png');"></div>
               <span class="name-project desc__active" data-content="idiom" id="en">Sokoban Game</span>
               <span class="name-project " data-content="idiom" id="es">Juego tipo Sokoban</span>
@@ -171,7 +173,8 @@
           </div>
         </div>
         <footer>
-          <span>© 2023 Cesar Luis Lojan All Rights Reserved.</span>
+          <span class="desc__active" data-content="idiom" id="en">© 2023 Cesar Luis Lojan All Rights Reserved.</span>
+          <span class="" data-content="idiom" id="es">© 2023 Derechos Reservados a Cesar Luis Lojan.</span>
         </footer>
       </main>
       <script src="js/main.js"></script>
