--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
             <span class="desc" data-content="idiom" id="es">Desarrollador Web</span>
             
           </div>
-          <img src="https://avatars.githubusercontent.com/u/67608060?v=4" alt="" srcset="">
+          <img src="img/CesarFotoPerfi.jpg" alt="" srcset="">
         </div>
         <div class="about" >
 
