--- a/src/index.html
+++ b/src/index.html
@@ -65,17 +65,17 @@
           <a href="#" data-target="#projects" class="links head desc" data-content="idiom" id="es"><i class="fa-solid fa-link"></i>Proyectos</a>
 
           <div class="cont-projects">
-            <a href="https://cllojan.github.io/OctoProfile/" target="_blank" rel="noopener noreferrer">
+            <a href="/#" target="_blank" rel="noopener noreferrer">
 
-              <div class="project" style="background-image: url('./img/portfolio/Web\ capture_12-4-2023_17057_cllojan.github.io.jpeg');"></div>
-              <span class="name-project desc__active" data-content="idiom" id="en">OctoProfile</span>
-              <span class="name-project " data-content="idiom" id="es">OctoProfile</span>
+              <div class="project" style="background-image: url('./img/casamia.png');"></div>
+              <span class="name-project desc__active" data-content="idiom" id="en">CasaMia</span>
+              <span class="name-project " data-content="idiom" id="es">CasaMia</span>
             </a>
-            <a href="https://github.com/cllojan/kanban-dnd" target="_blank" rel="noopener noreferrer">
+            <a href="/#" target="_blank" rel="noopener noreferrer">
 
-              <div class="project" style="background-image: url('./img/portfolio/kanban.png');"></div>
-              <span class="name-project desc__active" data-content="idiom" id="en">Kanban</span>
-              <span class="name-project " data-content="idiom" id="es">Kanban</span>
+              <div class="project" style="background-image: url('./img/fapecafe.png');"></div>
+              <span class="name-project desc__active" data-content="idiom" id="en">Fapecafes</span>
+              <span class="name-project " data-content="idiom" id="es">Fapecafes</span>
             </a>
             <a href="https://github.com/cllojan/itec-page" target="_blank" rel="noopener noreferrer">
 
@@ -83,18 +83,13 @@
               <span class="name-project desc__active" data-content="idiom" id="en">Itec Homepage</span>
               <span class="name-project " data-content="idiom" id="es">Itec Pagina Principal</span>
             </a>
-            <a href="https://cllojan.github.io/movie-search/" target="_blank" rel="noopener noreferrer">
+            <a href="#" target="_blank" rel="noopener noreferrer">
 
-              <div class="project" style="background-image: url('./img/portfolio/movie-search.png');" ></div>
-              <span class="name-project desc__active" data-content="idiom" id="en">Movie Search</span>
-              <span class="name-project " data-content="idiom" id="es">Buscador de Peliculas</span>
+              <div class="project" style="background-image: url('./img/ecomerce.png');" ></div>
+              <span class="name-project desc__active" data-content="idiom" id="en">Eshop Ecommerce</span>
+              <span class="name-project " data-content="idiom" id="es">Eshop Ecommerce</span>
             </a>
-            <a href="https://cllojan.github.io/rest-country/" target="_blank" rel="noopener noreferrer">
-
-              <div class="project" style="background-image: url('./img/portfolio/restcountry.png');"></div>
-              <span class="name-project desc__active" data-content="idiom" id="en">Search Country</span>
-              <span class="name-project " data-content="idiom" id="es">Buscar Pais</span>
-            </a>
+            
             <a href="https://cllojan.github.io/Sokoban_gd/game/Sokoban.html" target="_blank" rel="noopener noreferrer">
               <div class="project" style="background-image: url('./img/portfolio/sokoban.png');"></div>
               <span class="name-project desc__active" data-content="idiom" id="en">Sokoban Game</span>
